@@ -10,6 +10,9 @@
     addition of some files/programs, such as additional
     4DOS files, text utilties in TEXTUTIL directory and
     TITLE command to change window title. (Wengier)
+  - The return value of AL in Int21/AX=0Eh is no longer
+    fixed. The game Jurassic Park may run after moving
+    Z drive to a different letter (e.g. E:). (Wengier)
   - Added "Restart DOSBox-X with config file..." menu
     option to start DOSBox-X with the specified config
     file automatically from the menu. (Wengier)
